# rustyfic

./: Cargo.toml
docs/: rustyfic-dsl.txt
public/: default.toml
src/: engine.rs  lib.rs  main.rs  world.rs
src/engine/: actions.rs  conditions.rs  helpers.rs  items.rs  mod.rs  movement.rs  npcs.rs  output.rs  render.rs
src/world/: loader.rs  mod.rs  model.rs  validator.rs
